@@ -1,5 +1,9 @@
 2001-09-06  Richard Henderson  <rth@redhat.com>
 
+	* simplify-rtx.c (simplify_binary_operation): Revert last change.
+
+2001-09-06  Richard Henderson  <rth@redhat.com>
+
 	* simplify-rtx.c (simplify_binary_operation): Simplify contents
 	of CONST.
 
